force-app/main/default/objects/SD_KPI__c.object
<CustomObject>
    <fields>
        <fullName>Benchmark__c</fullName>
        <label>Benchmark</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DJSI_Display__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DJSI Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KPI_Code_DJSI__c</fullName>
        <label>KPI Code (DJSI)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KPI_Code_PTT__c</fullName>
        <label>KPI Code (PTT)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <inlineHelpText>สัญลักษณ์ที่เกี่ยวข้องกับการระบุข้อมูล Target ของ KPI เช่น ต้องการให้ Target ไม่เกิน 5 ก็ให้เลือกเครื่องหมายเป็น &lt; (Less Than) เป็นต้น</inlineHelpText>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>= (equal to)</fullName>
                </value>
                <value>
                    <fullName>&lt; (less than)</fullName>
                </value>
                <value>
                    <fullName>&gt; (more than)</fullName>
                </value>
                <value>
                    <fullName>≥ (greater than equal to)</fullName>
                </value>
                <value>
                    <fullName>≤ (less than equal to)</fullName>
                </value>
                <value>
                    <fullName>≠ (not eqaul to)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <inlineHelpText>ระบุเลขลำดับของรายการ KPI เพื่อใช้ในการจัดลำดับในการแสดงข้อมูลในหน้า OEMS</inlineHelpText>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PTT_Display__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PTT Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Name__c</fullName>
        <label>Short Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Value__c</fullName>
        <label>Target Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Leading</fullName>
                </value>
                <value>
                    <fullName>Lagging</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Case per mil. Man-hours</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>%</fullName>
                </value>
                <value>
                    <fullName>ล้านลูกบาศก์เมตร (Million m3)</fullName>
                </value>
                <value>
                    <fullName>ล้านตันเทียบเท่าคาร์บอนไดออกไซด์</fullName>
                </value>
                <value>
                    <fullName>Ton</fullName>
                </value>
                <value>
                    <fullName>Million Ton</fullName>
                </value>
                <value>
                    <fullName>Million M3</fullName>
                </value>
                <value>
                    <fullName>Million M3 per Million Ton Throughput</fullName>
                </value>
                <value>
                    <fullName>% (Hazardous waste to landfill per Hazardous waste)</fullName>
                </value>
                <value>
                    <fullName>Million Man-hours</fullName>
                </value>
                <value>
                    <fullName>Case per 200,000 Man-hours</fullName>
                </value>
                <value>
                    <fullName>Hours</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Worker_Type__c</fullName>
        <label>Worker Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Staff</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Master OEMS</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>KPI Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>